[gd_scene load_steps=5 format=3 uid="uid://d3v5fq62523gv"]

[ext_resource type="Script" path="res://game_container.gd" id="1_h867a"]
[ext_resource type="Texture2D" uid="uid://buksyvhh18fga" path="res://images/0.svg" id="2_50t1x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_amfin"]
content_margin_top = 25.0
content_margin_bottom = 25.0
bg_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id="Theme_ljd3c"]
Button/styles/normal = SubResource("StyleBoxFlat_amfin")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ljd3c")

[node name="GameContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("1_h867a")

[node name="TextureRect" type="TextureRect" parent="GameContainer"]
custom_minimum_size = Vector2(500, 300)
layout_mode = 2
texture = ExtResource("2_50t1x")
expand_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="GameContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Label" type="Label" parent="GameContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
text = "Slide text"

[node name="HBoxContainer" type="HBoxContainer" parent="GameContainer"]
layout_mode = 2

[node name="Button0" type="Button" parent="GameContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "a"

[node name="Button1" type="Button" parent="GameContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "b"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="GameContainer/HBoxContainer/Button0" to="GameContainer" method="_on_button_0_pressed"]
[connection signal="pressed" from="GameContainer/HBoxContainer/Button1" to="GameContainer" method="_on_button_1_pressed"]
